# hemera

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/plans/: docs-structure.md
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/benches/: hash.rs  permutation.rs  tree.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: README.md
docs/explanation/: README.md  capacity.md  chunk-size.md  content-ids.md  migration.md  parameters.md  particle-ids.md  performance.md  security.md  self-bootstrap.md  sponge-only.md  the-name.md  why-hemera.md
hemera-bench/: Cargo.toml
hemera-bench/benches/: hash.rs  permutation.rs
hemera-cli/: Cargo.toml
hemera-cli/src/: main.rs
hemera-rs/: Cargo.toml
hemera-rs/src/: constants.rs  encoding.rs  field.rs  lib.rs  params.rs  tree.rs
hemera-rs/tests/: vectors.rs
hemera-wgsl/: Cargo.toml
reference/: README.md  api.md  bibliography.md  bootstrap.md  capacity.md  constants.md  encoding.md  field.md  matrices.md  permutation.md  sponge.md  tree.md
reference/props/: README.md  algebraic-fiat-shamir.md  batched-proving.md  compact-output.md  constraint-free-mds.md  folded-sponge.md  hemera-2.md  hemera-3.md  inversion-sbox.md  partial-round-collapse.md
roadmap/: README.md  algebraic-fiat-shamir.md  batched-proving.md  capacity-typing.md  compact-output.md  constraint-free-mds.md  erasure-coding.md  folded-sponge.md  inversion-sbox.md  partial-round-collapse.md
rs/: Cargo.toml
rs/src/: batch.rs  bootstrap.rs  constants.rs  encoding.rs  field.rs  lib.rs  params.rs  permutation.rs  sparse.rs  sponge.rs  stream.rs  stream_async.rs  tree.rs
rs/tests/: vectors.rs
spec/: README.md  spec.md
specs/: api.md  bootstrap.md  encoding.md  sponge.md
src/: bootstrap.rs  constants.rs  encoding.rs  hazmat.rs  lib.rs  params.rs  sponge.rs  tree.rs
src/gpu/: mod.rs  poseidon2.wgsl
vectors/: hemera.json
wgsl/: Cargo.toml
wgsl/src/: lib.rs
wgsl/src/shaders/: encoding.wgsl  entry_points.wgsl  field.wgsl  params.wgsl  permutation.wgsl  sponge.wgsl  tree.wgsl
wgsl/tests/: gpu.rs
