# ---
# tags: hemera, config
# crystal-type: source
# crystal-domain: comp
# ---
[workspace]
resolver = "3"
members = [
    "rs",
    "wgsl",
    "cli",
    "bench",
]

[workspace.lints.rust]
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unused-async = "warn"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
