[package]
name = "cyber-hemera"
version = "0.2.0"
edition = "2024"
description = "Hemera — Poseidon2 hash over Goldilocks field"
license-file = "../LICENSE"
rust-version = "1.89"
repository = "https://github.com/cyberia-to/hemera"
homepage = "https://github.com/cyberia-to/hemera"
documentation = "https://docs.rs/cyber-hemera"
keywords = ["poseidon2", "goldilocks", "hash", "zk", "crypto"]
categories = ["cryptography", "no-std"]
readme = "../README.md"

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
unused-async = "warn"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
